plugins/colorpicker: Don't apply color profile for picked color

We'll read pixel value the same as in application. This fixes
wrong color when using Night Light or ICC profile.

Use the same logic as screenshot and screencast.

BUG: 511007