src/plugins/colorpicker/colorpicker.h
@@ -25,7 +25,6 @@ class ColorPickerEffect : public Effect, protected QDBusContext
 public:
     ColorPickerEffect();
     ~ColorPickerEffect() override;
-    void paintScreen(const RenderTarget &renderTarget, const RenderViewport &viewport, int mask, const QRegion &deviceRegion, Output *screen) override;
     bool isActive() const override;
 
     int requestedEffectChainPosition() const override
@@ -44,7 +43,6 @@ private:
     void setPicking(bool picking);
 
     QDBusMessage m_replyMessage;
-    QPointF m_scheduledPosition;
     bool m_picking = false;
 };
 
